--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ iframe{
                     <ul>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#about">About Us</a></li>
-                        <li><a href="https://soflosuds.github.io/ceramic-coating">Ceramic Coating</a></li>
+                        <li><a href="https://iawconcord.github.io/ceramic-coating">Ceramic Coating</a></li>
                     </ul>
                 </div>
                 <div class="social-links">
